--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ejs": "^2.6.2",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "override": "0.0.1"
   }
 }
