--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.4",
-    "override": "0.0.1"
+    "override": "0.0.1",
+    "sequelize": "^6.3.5"
   }
 }
